5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1800_2570.log
== TEST (2019-06-11 11:05:53) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(x)/size(x)
n = size(v)
p = 1
for i in range(n):
	p = p * abs(v[i]- m)
print(round(p,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:56) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(x)/size(x)
n = size(v)
p = 1
for i in range(n):
	p = p * abs(v[i]- m)
print(round(p,2))
	
	
-- EXECUTION TIME:
1.57971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 4, in <module>
    m = sum(x)/size(x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:03) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(x)/size(x)
n = size(v)
p = 1
for i in range(n):
	p = p * abs(v[i]- m)
print(round(p,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:47) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(x)/size(x)
n = size(v)
p = 1
for i in range(n):
	p = p * abs(v[i]- m)
print(round(p**1/n,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:09) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(v)/size(v)
n = size(v)
p = 1
for i in range(n):
	p = p * abs(v[i]- m)
print(round(p**1/n,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:12:22) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(v)/size(v)
n = size(v)
p = 1
for i in range(n):
	p = p * (abs(v[i]- m))
print(round(p**1/n,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:28) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(v)/size(v)
n = size(v)
p = 1
for i in range(n):
	p = p * (abs(v[i]- m))
p = p ** 1/n
print(round(p,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:07) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(v)/size(v)
n = size(v)
p = 1
for i in range(n):
	p = p * (abs(v[i]- m))
p = p ** (1/n)
print(round(p,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:17:23) 
-- CODE:
from numpy import *

v = array(eval(input("Vetor de numeros reais: ")))
m = sum(v)/size(v)
n = size(v)
p = 1
for i in range(n):
	p = p * (abs(v[i]- m))
p = p ** (1/n)
print(round(p,3))
	
	
-- EXECUTION TIME:
1.01071
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
